# waicy-workshops

./: .replit  README.md  pyproject.toml
workshop-1/: 1-1-intro-to-programming-blank.py  1-1-intro-to-programming.py  1-2-car-mpg-analysis-blank.py  1-2-car-mpg-analysis.py  1-2-car-mpg-data.csv
