[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["thejavaman <<>>"]
description = ""
name = "waicy-workshops"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.3.3"
python = "^3.8"
seaborn = "^0.11.2"
sklearn = "^0.0"
[tool.poetry.dev-dependencies]
